--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Playlist Recommendation</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script defer src="scripts.js"></script>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='styles.css') }}"
+    />
+    <script defer src="{{ url_for('static', filename='scripts.js') }}"></script>
   </head>
   <body>
     <div class="container">
