update index.html & add imagePullPolicy

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -12,8 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Cloud Computing - TP2 - Playlist Recommendation</h1>
-      <h2>Aluno: Jean George Alves Evangelista</h1>
+      <h1>Playlist Recommendation</h1>
       <form onsubmit="submitForm(event)">
         <div id="form-container" class="form-group">
           <div class="form-group">
