--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Song Recommendation</title>
+    <title>Playlist Recommendation</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='styles.css') }}"
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Song Recommendation</h1>
+      <h1>Playlist Recommendation</h1>
       <form onsubmit="submitForm(event)">
         <div id="form-container" class="form-group">
           <div class="form-group">
